# DSFinancePr

dsfinlendclub/: .gitignore  README.md  pyproject.toml  requirements.txt
dsfinlendclub/conf/base/: catalog.yml  parameters_data_processing.yml  parameters_feature_engineering.yml
dsfinlendclub/docs/source/: conf.py  index.rst
dsfinlendclub/notebooks/: Exploration_nokedro.ipynb  RF_model.ipynb  data-exploration.ipynb  data_science_modeling.ipynb  dataset_cleaning.ipynb  feature_engineering.ipynb  testing.ipynb
dsfinlendclub/src/dsfinlendclub/: __init__.py  __main__.py  settings.py
dsfinlendclub/src/dsfinlendclub/pipelines/data_processing/: nodes.py  pipeline.py
dsfinlendclub/src/dsfinlendclub/pipelines/feature_engineering/: nodes.py  pipeline.py
dsfinlendclub/tests/pipelines/data_processing/: test_pipeline.py  test_sample.py
dsfinlendclub/tests/pipelines/feature_engineering/: test_pipeline.py  test_sample.py
